--- a/FrankenPeople/FrankenPeople.csproj
+++ b/FrankenPeople/FrankenPeople.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="32.0.2" />
+    <PackageReference Include="CountryData.Bogus" Version="3.45.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
